--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "git-changelists",
+  "name": "git-changelist",
   "displayName": "Git Changelists",
   "description": "IntelliJ-style changelists for VS Code. Save snapshots of your changes, switch between versions, and commit selectively.",
   "version": "1.1.0",
