--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "smart-changelists",
   "displayName": "Smart Changelists",
-  "description": "IntelliJ-style changelists for VS Code. Save snapshots of your changes, switch between versions, and commit selectively.",
-  "version": "1.1.2",
+  "description": "JetBrains-style changelists for VS Code. Save snapshots of your changes, switch between versions, and commit selectively.",
+  "version": "1.1.3",
   "publisher": "harungecit",
   "author": {
     "name": "Harun Geçit",
@@ -23,10 +23,19 @@
     "changelists",
     "changelist",
     "intellij",
+    "jetbrains",
+    "shelve",
+    "snapshot",
+    "versioning",
+    "git tools",
+    "git extension",
+    "phpstorm",
+    "webstorm",
+    "vscode git",
     "source control",
     "scm"
   ],
-  "icon": "resources/icon-black.png",
+  "icon": "resources/icon.png",
   "repository": {
     "type": "git",
     "url": "https://github.com/harungecit/smart-changelists"
@@ -388,17 +397,24 @@
     "build": "node esbuild.config.js",
     "watch": "node esbuild.config.js --watch",
     "lint": "eslint src --ext ts",
+    "pretest": "npm run build && tsc -p ./tsconfig.test.json",
+    "test": "node ./out/test/runTest.js",
     "package": "vsce package",
     "publish": "vsce publish"
   },
   "devDependencies": {
+    "@types/glob": "^8.1.0",
+    "@types/mocha": "^10.0.10",
     "@types/node": "^20.10.0",
     "@types/vscode": "^1.85.0",
     "@typescript-eslint/eslint-plugin": "^6.13.0",
     "@typescript-eslint/parser": "^6.13.0",
+    "@vscode/test-electron": "^2.5.2",
     "@vscode/vsce": "^2.22.0",
     "esbuild": "^0.19.8",
     "eslint": "^8.55.0",
+    "glob": "^13.0.0",
+    "mocha": "^11.7.5",
     "typescript": "^5.3.2"
   },
   "dependencies": {
